# vala-tree-sitter

./: .gitmodules  README.md  meson.build  run.sh  test
src/: main.c  main.vala  meson.build
vapi/: libtreesitter.vapi
